<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Study_Network</string>
    <string name="path">C:\</string>
    <string name="login">Login</string>
    <string name="browse">Browse</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="journals">Journals</string>
    <string name="anouncement">Announcements</string>
    <string name="ano">Create Announcement</string>
    <string name="grouptitle">Enter Group Name</string>
    <string name="grpdesc">Enter Group Description</string>
    <string name="creategrp">Create</string>
    <string name="addmem">Enter Group member name</string>
    <string name="createanntitle">Enter Announcement Subject</string>
    <string name="createjurnltitle">Enter Journal Title</string>
    <string name="creatanndesc">Enter Announcement Description</string>
    <string name="frgt_pwd">Forgot Password</string>
    <string name="email">Enter Email</string>
    <string name="pstjrnl">Post Journal</string>
    <string name="post">Post</string>
    <string name="group">Groups</string>
    <string name="newgroupname">GroupName</string>
    <string name="new_button">New</string>
    <string name="creategrouptitle">Create Group</string>
    <string name="userprofile">Profile</string>
    <string name="name">Name</string>
    <string name="resetpwd">Reset Password</string>
    <string name="changename">Change Username</string>
    <string name="resetpwdTitle">Reset Password</string>
    <string name="oldpwd">Old Password</string>
    <string name="newpwd">New Password</string>
    <string name="newusername">New Username</string>
    <string name="forumtopic">Forum Topic</string>
    <string name="forumdescription">Forum Description</string>
    <string name="forumtitle">Forum Title</string>
    <string name="tvforumpostedby">Posted by:</string>
    <string name="forumcomment">Forum Comment:</string>
    <string name="recivername">Enter Reciver Name:</string>
    <string name="newchatmessage">New Chat Message:</string>
    <string name="send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="forgotpasswordtitle">Forgot Password</string>
    <string name="home">Home</string>
    <string name="createforum">Create Forum</string>
    <string name="postquiz">Post Quiz</string>
    <string name="postannouncement">Post Announcement</string>
    <string name="postjournal">Post Journal</string>
    <string name="chat">Chat</string>
    <string name="forum">Forums</string>
    <string name="quiz">Quizzes</string>
    <string name="announcement">Announcements</string>
    <string name="journal">Journals</string>
    <string name="groupname">Group Name</string>
    <string name="errorButton">OK</string>
    <string name="errorTitleUname">Username is Required</string>
    <string name="errorMessageUname">Username does not exist</string>
    <string name="errorTitleUnameNotFound">Username is not available</string>
    <string name="errorMessageUnameNotFound">Username must be registered</string>
    <string name="errorTitlepwd">Password is Required</string>
    <string name="errorMessagepwd">You must enter a Password</string>
</resources>
