<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/darkred" >

    <TextView
        android:id="@+id/txtvfrgtpwdtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/creategrouptitle"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etgrouptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtvfrgtpwdtitle"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/grouptitle"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" >

    </EditText>

    <EditText
        android:id="@+id/etgroupdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etgrouptitle"
        android:layout_below="@+id/etgrouptitle"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/white"        
		android:textSize="@dimen/content_size"
		android:hint="@string/grpdesc"
         >
    </EditText>
    
        <EditText
        android:id="@+id/etgrpmembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etgroupdesc"
        android:layout_below="@+id/etgroupdesc"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/white"        
		android:textSize="@dimen/content_size"
		android:hint="@string/addmem"/>

    <Button
        android:id="@+id/btncreategrp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/creategrp" 
        android:textColor="@color/white"        
		android:textSize="@dimen/content_size"
        
        />



</RelativeLayout>