<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/darkred" >

    <TextView
        android:id="@+id/tvchangename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/changename"
        android:textColor="@color/white"
        android:textSize="@dimen/page_title" />
    
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tvchangename"
            android:layout_below="@+id/tvchangename"
            android:layout_marginTop="54dp"
            android:ems="10"
            android:hint="@string/username"
            android:textSize="@dimen/content_size" />    

    <EditText
        android:id="@+id/etnewusrname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etUsername"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/newusername"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" />

        <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etnewusrname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" />



</RelativeLayout>