<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkred"
    tools:context="com.example.study_network.FullscreenActivity" >

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/page_title" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewLoginTitle"
        android:layout_marginRight="42dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" >
        </EditText>

   <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" >

    </EditText>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewLoginTitle"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="39dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" />

    <Button
        android:id="@+id/buttonfrgtpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/frgt_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" />

</RelativeLayout>
