<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkred"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvcreateforumtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:text="@string/createforum"
        android:textColor="@color/white"
        android:textSize="@dimen/page_title" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvcreateforumtitle"
        android:layout_below="@+id/tvcreateforumtitle"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" />

    <EditText
        android:id="@+id/etforumtopicc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etusername"
        android:layout_below="@+id/etusername"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/forumtopic"
         android:textColor="@color/white"
        android:textSize="@dimen/content_size"
        >
        

    </EditText>

    <EditText
        android:id="@+id/etforumdesription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etforumtopicc"
        android:layout_below="@+id/etforumtopicc"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textMultiLine" 
         android:hint="@string/forumdescription"
         android:textColor="@color/white"
        android:textSize="@dimen/content_size"
        >


    </EditText>

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etforumdesription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size" />

</RelativeLayout>
