<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkred"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/frgt_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/page_title"
        />

    <EditText
        android:id="@+id/editTextForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewForgotPassword"
        android:layout_below="@+id/textViewForgotPassword"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size"
        tools:ignore="TextFields" >

    </EditText>

    <Button
        android:id="@+id/buttonfrgtpwdSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/submit" 
        android:textColor="@color/white"/>

</RelativeLayout>
